<resources>
    <string name="app_name">My Run Debug</string>
    <string name="route_tracking_distance_label">Distance</string>
    <string name="route_tracking_time_label">Time</string>
    <string name="route_tracking_pace_label">Pace</string>
    <string name="performance_unit_distance_km">km</string>
    <string name="common_time_unit">minute</string>
    <string name="performance_unit_pace_min_per_km">/km</string>
    <string name="route_tracking_speed_label">Speed</string>
    <string name="common_speed_unit">km/h</string>
    <string name="error_permission_settings_disabled">Please grant permissions in app settings</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_required_permissions_missing">Please grant permissions to use this features</string>
    <string name="action_close">Close</string>
    <string name="error_location_service_unavailable">Please turn on location service to use this feature.</string>
    <string name="route_tracking_notification_title">Your route tracking is in progress</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="route_tracking_stop_confirmation_title">You are stopped.</string>
    <string name="action_just_do_it">Just do it</string>
    <string name="route_tracking_activity_settings_activity_selection">"Activity type: %1$s"</string>
    <string name="activity_type_name_running">Running</string>
    <string name="activity_type_name_cycling">Cycling</string>
    <string name="route_tracking_captured_image_ratio">1.5</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="action_resume">Resume</string>
    <string name="item_activity_time_today">Today at %1$s</string>
    <string name="item_activity_time_yesterday">Yesterday at %1$s</string>
    <string name="item_activity_title_morning">Morning %1$s</string>
    <string name="item_activity_title_afternoon">Afternoon %1$s</string>
    <string name="item_activity_title_evening">Evening %1$s</string>
    <string name="activity_name_running">Run</string>
    <string name="activity_name_cycling">Ride</string>
    <string name="user_timeline_error_loading_list">There\'s an error loading activities.\nRetry.</string>
    <string name="splash_welcome_text">Let\'s start your\nfirst activity!</string>
    <string name="sign_in_with_facebook_button">Log in with Facebook</string>
    <string name="sign_in_hint_mobile_number">Mobile Number</string>
    <string name="action_send_otp">Send OTP</string>
    <string name="action_confirm">Confirm</string>
    <string name="otp_instruction">Enter the OTP sent to your phone number</string>
    <string name="otp_hint">SMS OTP</string>
    <string name="otp_resend_button">Resend</string>
    <string name="otp_invalid_code_error">Incorrect otp code</string>
    <string name="otp_resend_template">Resend OTP in %1$d seconds</string>
    <string name="sign_in_title">Log In</string>
    <string name="sign_in_option_separator">or</string>
    <string name="profile_basic_label">Basic Information</string>
    <string name="user_profile_hint_name">Name</string>
    <string name="user_profile_hint_email">Email Address</string>
    <string name="profile_physical_label">Physical Information</string>
    <string name="user_profile_hint_gender">Gender</string>
    <string name="user_profile_hint_height">Height (cm)</string>
    <string name="user_profile_hint_weight">Weight (kg)</string>
    <string name="profile_save_button">Save Profile</string>
    <string name="profile_link_running_app_button">Connect to running app</string>
    <string name="error_invalid_display_name">Please type in your name</string>
    <string name="edit_user_profile_link_running_app_success_message">You have successfully linked your account</string>
    <string name="profile_link_running_app_dialog_title">Select app to upload your activity</string>
    <string name="photo_selection_dialog_title">Update image from</string>
    <string name="edit_user_profile_session_expired_error_message">Your session has expired. You need to re-login first.</string>
    <string name="profile_crop_photo_instruction">Drag to resize the image. Your profile photo will be cropped within the circle</string>
    <string name="profile_crop_button">Crop</string>
    <string name="user_profile_edit_button">Edit</string>
    <string name="profile_linked_app_section_label">App Information</string>
    <string name="action_logout">Log out</string>
    <string name="profile_linked_app_label">Linked App</string>
    <string name="profile_app_unlink_dialog_message">Do you want to disconnect this app?</string>
    <string name="action_yes">Yes</string>
    <string name="profile_logout_confirmation">Are you sure you want to log out?</string>
    <string name="profile_linked_with_fb">Linked with Facebook</string>
    <string name="profile_link_to_fb_button">Link to Facebook</string>
    <string name="user_profile_hint_phone">Mobile number</string>
    <string name="user_timeline_title">Timeline</string>
    <string name="user_profile_title">Profile</string>
    <string name="edit_user_profile_mobile_number_update_success_message">Your phone number has been changed</string>
    <string name="action_no">No</string>
    <string name="sign_in_with_google_button">Log in with Google</string>
    <string name="action_sign_out">Sign out</string>
    <string name="strava_app_name">Strava</string>
    <string name="user_profile_strava_description">Sync your new activity to Strava automatically.</string>
    <string name="google_fit_app_name">Google Fit</string>
    <string name="user_profile_google_fit_description">Access to Google Fit fitness data</string>
    <string name="user_profile_error_app_disconnect">Can not disconnect app at the moment</string>
    <string name="user_profile_error_app_connect">Can not connect this app at the moment.</string>
    <string name="performance_avg_pace_label">Avg. Pace</string>
    <string name="performance_speed_label">Speed</string>
    <string name="performance_unit_speed">km/h</string>
    <string name="performance_duration_label">Time</string>
    <string name="performance_cadence_label">Avg. Cadence</string>
    <string name="performance_cadence_unit">spm</string>
    <string name="user_timeline_loading_item_message">Loading your activities…</string>
    <string name="activity_details_loading_message">Loading your activity…</string>
    <string name="activity_details_loading_error">Loading error.</string>
    <string name="action_retry">Retry</string>
    <string name="activity_export_error_notification_title">Activity export error</string>
    <string name="activity_export_progress_notification_title">Exporting activities</string>
    <string name="activity_export_progress_notification_remaining">%1$d remaining</string>
    <string name="activity_export_success_notification_title">Your tracklog was exported. Tap to share it.</string>
    <string name="activity_details_share_menu_item_export_file">Export tracklog file</string>
    <string name="activity_export_send_tracklog_title">Send tracklog of %1$s</string>
    <string name="action_send">Send</string>
    <string name="activity_export_progress_notification_finishing">Finishing</string>
    <string name="route_tracking_save_activity">Finish and save activity</string>
    <string name="route_tracking_discard_activity">Discard activity</string>
    <string name="activity_upload_notification_title">Uploading your activity</string>
    <string name="location_permission_rationale_message">Your activity route is tracked in <b>precise locations</b>. Please grant the permission first.</string>
    <string name="action_proceed">Proceed</string>
    <string name="location_permission_is_missing_error">Feature is not available without required permissions.</string>
    <string name="route_tracking_discard_activity_confirm_message">Your tracking route will be lost after being discarded.\nDo you want to continue?</string>
    <string name="notification_channel_name_tracking_service">Route tracking</string>
    <string name="notification_channel_description_tracking_service">Notification that shows progress of your activity.</string>
    <string name="notification_channel_name_general">General</string>
    <string name="notification_channel_description_general">App general notifications</string>
    <string name="notification_channel_name_debug">Debug</string>
    <string name="notification_channel_description_debug">Available for debug only</string>
    <string name="profile_logout_pending_activity_upload_warning">Your uploading activities <b>will be lost.</b></string>
    <string name="content_description_edit_profile_button">Edit Profile button</string>
    <string name="edit_user_profile_title">Edit Profile</string>
    <string name="user_feed_title">Feed</string>
    <string name="home_upload_progress">Uploading %1$d activities.</string>
    <string name="edit_user_profile_connection_unavailable_error">You need internet connection to update profile image.</string>
    <string-array name="user_timeline_activity_selection_items">
        <item>Running</item>
        <item>Cycling</item>
    </string-array>
    <string-array name="photo_selection_options">
        <item>Camera</item>
        <item>Photo Gallery</item>
    </string-array>
    <string-array name="route_tracking_stop_options">
        <item>Finish and save activity</item>
        <item>Discard activity</item>
        <item>Cancel</item>
    </string-array>
</resources>
