<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/profile_fields_divider"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/common_page_horizontal_padding">

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="@dimen/profile_avatar_size"
                android:layout_height="@dimen/profile_avatar_size"
                android:layout_marginTop="25dp"
                android:background="@drawable/ic_account_circle"
                android:backgroundTint="@color/colorAccent"
                android:padding="8dp" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_field_spacing"
                android:text="@string/home_edit_profile_button" />

            <TextView
                style="@style/ProfileSectionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_basic_label" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/user_name_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_face"
                app:tf_label="@string/user_profile_hint_name" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/email_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_alternate_email"
                app:tf_label="@string/user_profile_hint_email" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/phone_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_call"
                app:tf_label="@string/user_profile_hint_phone" />

            <TextView
                style="@style/ProfileSectionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_physical_label" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/gender_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_person"
                app:tf_label="@string/user_profile_hint_gender" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/height_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_height"
                app:tf_label="@string/user_profile_hint_height" />

            <akio.apps.myrun._base.view.TextField
                android:id="@+id/weight_text_field"
                style="@style/UserProfileField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_fitness_center"
                app:tf_label="@string/user_profile_hint_weight" />

            <LinearLayout
                android:id="@+id/linked_apps_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/ProfileSectionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_linked_app_section_label" />

            </LinearLayout>

            <Button
                android:id="@+id/facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/facebook_background"
                android:paddingVertical="@dimen/sign_in_option_vertical_padding"
                android:text="@string/sign_in_with_facebook_button"
                app:icon="@drawable/ic_facebook" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_page_vertical_padding"
                android:text="@string/action_logout" />

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>