<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:paddingStart="@dimen/common_page_horizontal_padding"
    android:paddingTop="@dimen/common_page_vertical_padding"
    android:paddingEnd="@dimen/common_page_horizontal_padding"
    android:paddingBottom="@dimen/common_page_vertical_padding">

    <TextView
        android:id="@+id/instruction_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/otp_instruction"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/otp_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/otp_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/otp_hint"
        android:inputType="number"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/resend_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_text_view" />

    <Button
        android:id="@+id/resend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/otp_resend_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_edit_text" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_confirm"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>