<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/sign_in_page_horizontal_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/sign_in_page_horizontal_padding" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="google_button,facebook_button,adjacent_text_view,phoneBox,spacer_1,send_otp_button"
            app:flow_maxElementsWrap="1"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/google_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:paddingVertical="@dimen/sign_in_option_vertical_padding"
            android:text="@string/sign_in_with_google_button"
            android:textAllCaps="false"
            android:textColor="@color/darkText"
            app:icon="@drawable/ic_google_signin"
            app:iconTint="@null" />

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/facebook_background"
            android:paddingVertical="@dimen/sign_in_option_vertical_padding"
            android:text="@string/sign_in_with_facebook_button"
            android:textAllCaps="false"
            app:icon="@drawable/ic_facebook" />

        <TextView
            android:id="@+id/adjacent_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/common_page_section_vertical_spacing"
            android:text="@string/sign_in_option_separator" />

        <akio.apps.myrun.feature.signin.view.PhoneBox
            android:id="@+id/phoneBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_edittext_background" />

        <Space
            android:id="@+id/spacer_1"
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/send_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_send_otp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>